crates/vexor-compiler/tests/golden/error/input/unclosed_string.vx
-- unclosed string
val label = "hello
export Circle(10)
